added google llink

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <!-- Header -->
   <h1>Hello World!</h1>
 
+  <a href="https://google.com">Go to Google</a>
+
   <!-- Image -->
   <img src="http://en.spongepedia.org/images/thumb/3/33/Spongebob!!!.jpg/180px-Spongebob!!!.jpg" alt="Spongebob!" />
   <br>
