--- a/contact.html
+++ b/contact.html
@@ -21,24 +21,39 @@
   				</button>
 		  	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 		    	<div class="navbar-nav ml-auto">
-		      		<a class="nav-item nav-link active" href="index.html">About<span class="sr-only">(current)</span></a><span class="seperator">|</span>
+		      		<a class="nav-item nav-link" href="index.html">About</a><span class="seperator">|</span>
 		      		<a class="nav-item nav-link" href="portfolio.html">Portfolio</a><span class="seperator">|</span>
-		      		<a class="nav-item nav-link" href="contact.html">Contact</a>
+		      		<a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
 		    	</div>
 		  	</div>
 		</div>
 	</nav>	
 
-	<div class="container aboutContent">
+	<div class="container contactContent">
 		<div class="row">
 
-			<div class="col-md-8">
+			<div class="col-md-8 colL">
 				<div class="card">
-					<div class="card-body">
-						<h3 class="card-title headerAbout">About Me</h3>
-						<hr class="my-4">
-						<p class="card-text"><img class="img-fluid float-md-left rounded mr-3" src="assets/images/sloth.jpg" alt="Kumari">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt optio provident tempora amet, eveniet et, eum illum, culpa laborum dicta recusandae magni architecto. Illo saepe facilis, unde. Debitis, atque, doloremque?</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At dolorum perferendis voluptates error ullam placeat repellendus. Repellendus error repellat veritatis recusandae voluptates earum rerum consectetur itaque, ipsam nihil. Alias, nemo.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores ratione sint ex porro excepturi non dolorum, ullam ea quae vel earum, soluta obcaecati natus. Eligendi iusto accusantium mollitia debitis assumenda!</p>
-					</div>
+  					<div class="card-body">
+    					<h3 class="card-title headerContact">Contact</h3>
+    				<hr class="my-4">
+						<form>
+								<div class="form-group">
+									<label class="col-form-label" for="formGroupNameInput">Name</label>
+								<input type="text" class="form-control" id="formGroupNameInput" placeholder="John Smith">
+							</div>
+							<div class="form-group">
+								<label for="exampleInputEmail1">Email address</label>
+								<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+								<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+								</div>
+								<div class="form-group">
+								<label for="exampleFormControlTextarea1">Message</label>
+								<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+								</div>
+								<button type="submit" class="btn btn-primary">Submit</button>
+						</form>	
+    				</div>
 				</div>
 			</div>
 
@@ -55,7 +70,7 @@
 					</div>
 				</div>	
 			</div>
-	
+
 			<div class="push"></div>
 
 		</div>
@@ -65,7 +80,7 @@
 		<div class="container containFooter">
 			<p class="copyright">Copyright &copy; 2017 Kumari</p>
 	  	</div>
-	</footer>
+	</footer>	
 
 </body>
 
