added placeholder image to portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -27,11 +27,11 @@
 		    	</div>
 		  	</div>
 		</div>
-	</nav>	
+	</nav>
 
 	<div class="container portfolioContent">
 		<div class="row">
-		
+
 			<div class="col-md-8">
 				<div class="card">
 		  			<div class="card-body">
@@ -41,42 +41,43 @@
 		<div class="container">
 			<div class="row">
 
-				<div class="col-md-6">								
+				<div class="col-md-6">
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/hangman.jpg" alt="Hangman image">
+  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Hangman</h4>
+    							<h4 class="card-title portfolioBar">Coming Soon</h4>
 							</div>
 					</div>
 
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/trivia.jpg" alt="Trivia image">
+  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Trivia</h4>
+    							<h4 class="card-title portfolioBar">Coming Soon</h4>
 							</div>
 					</div>
 
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/rock.jpg" alt="Rock image">
+  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Rock Paper Scissors</h4>
+    							<h4 class="card-title portfolioBar">Coming Soon</h4>
 							</div>
 					</div>
 				</div>
 
-				<div class="col-md-6">								
+				<div class="col-md-6">
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/rpg.jpg" alt="RPG image">
+  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">RPG Game</h4>
+    							<h4 class="card-title portfolioBar">Coming Soon</h4>
 							</div>
 					</div>
 
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/rutgers.jpg" alt="Rutgers image">
+  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Rutgers Info Widget</h4>
+    							<h4 class="card-title portfolioBar">Coming Soon</h4>
 							</div>
+
 					</div>
 				</div>
 
@@ -98,7 +99,7 @@
 							<a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
 							</p>
 						</div>
-					</div>	
+					</div>
 				</div>
 
 			<div class="push"></div>
@@ -110,7 +111,7 @@
 		<div class="container containFooter">
 			<p class="copyright">Copyright &copy; 2017 Kumari</p>
 	  	</div>
-	</footer>	
+	</footer>
 
 </body>
 
