added image and link to train time project

--- a/portfolio.html
+++ b/portfolio.html
@@ -42,13 +42,14 @@
 			<div class="row">
 
 				<div class="col-md-6">
+                    <a href="https://kumarivb.github.io/trainTime/" target="_blank">
 					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
+  						<img class="card-img img-fluid" src="assets/images/train.png" alt="Train Time">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Coming Soon</h4>
+    							<h4 class="card-title portfolioBar">Train Time</h4>
 							</div>
 					</div>
-
+                        </a>
 					<div class="card bg-dark text-white mb-4">
   						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
