added cramming clique to portfolio

--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 		    	</div>
 		  	</div>
 		</div>
-	</nav>	
+	</nav>
 
 	<div class="container contactContent">
 		<div class="row">
@@ -51,8 +51,8 @@
 								<label for="exampleFormControlTextarea1">Message</label>
 								<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
 								</div>
-								<button type="submit" class="btn btn-primary">Submit</button>
-						</form>	
+								<button type="submit" class="btn btn-primary"><a href="mailto:kumarivb@gmail.com?subject=Lets%20Converse">Submit</a></button>
+						</form>
     				</div>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 						<a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
 						</p>
 					</div>
-				</div>	
+				</div>
 			</div>
 
 			<div class="push"></div>
@@ -80,7 +80,7 @@
 		<div class="container containFooter">
 			<p class="copyright">Copyright &copy; 2017 Kumari</p>
 	  	</div>
-	</footer>	
+	</footer>
 
 </body>
 
