--- a/portfolio.html
+++ b/portfolio.html
@@ -55,17 +55,19 @@
 					   <div class="card bg-dark text-white mb-4">
   						    <img class="card-img img-fluid" src="assets/images/cClique.jpg" alt="Coming Soon">
   							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Coming Soon</h4>
+    							<h4 class="card-title portfolioBar">Cramming Clique</h4>
 							</div>
 					   </div>
                     </a>
 
-					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
-  							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Coming Soon</h4>
+					<a href="https://kumarivb.github.io/liriNode/" target="_blank">
+						<div class="card bg-dark text-white mb-4">
+							<img class="card-img img-fluid" src="assets/images/liri.jpg" alt="Coming Soon">
+							<div class="card-img-overlay p-0">
+								<h4 class="card-title portfolioBar">Liri</h4>
 							</div>
-					</div>
+						</div>
+					</a>
 				</div>
 
 				<div class="col-md-6">
