added hangman CLI to prtfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -53,7 +53,7 @@
 
                     <a href="https://tkrr.github.io/crammingclique/" target="_blank">
 					   <div class="card bg-dark text-white mb-4">
-  						    <img class="card-img img-fluid" src="assets/images/cClique.jpg" alt="Coming Soon">
+  						    <img class="card-img img-fluid" src="assets/images/cClique.jpg" alt="Cramming Clique">
   							<div class="card-img-overlay p-0">
     							<h4 class="card-title portfolioBar">Cramming Clique</h4>
 							</div>
@@ -62,7 +62,7 @@
 
 					<a href="https://kumarivb.github.io/liriNode/" target="_blank">
 						<div class="card bg-dark text-white mb-4">
-							<img class="card-img img-fluid" src="assets/images/liri.jpg" alt="Coming Soon">
+							<img class="card-img img-fluid" src="assets/images/liri.jpg" alt="Liri">
 							<div class="card-img-overlay p-0">
 								<h4 class="card-title portfolioBar">Liri</h4>
 							</div>
@@ -71,12 +71,14 @@
 				</div>
 
 				<div class="col-md-6">
-					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
-  							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Coming Soon</h4>
+					<a href="https://kumarivb.github.io/hangCLI/" target="_blank">
+						<div class="card bg-dark text-white mb-4">
+							<img class="card-img img-fluid" src="assets/images/hangman.jpg" alt="Hangman">
+							<div class="card-img-overlay p-0">
+								<h4 class="card-title portfolioBar">Hangman</h4>
 							</div>
-					</div>
+						</div>
+					</a>
 
 					<div class="card bg-dark text-white mb-4">
   						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
