added bamazon to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -79,13 +79,15 @@
 							</div>
 						</div>
 					</a>
-
-					<div class="card bg-dark text-white mb-4">
-  						<img class="card-img img-fluid" src="assets/images/soon.jpg" alt="Coming Soon">
-  							<div class="card-img-overlay p-0">
-    							<h4 class="card-title portfolioBar">Coming Soon</h4>
+					
+					<a href="https://github.com/kumarivb/bamazon/blob/master/README.md" target="_blank"></a>
+						<div class="card bg-dark text-white mb-4">
+							<img class="card-img img-fluid" src="assets/images/bamazon.jpg" alt="Bamazon">
+							<div class="card-img-overlay p-0">
+								<h4 class="card-title portfolioBar">Bamazon</h4>
 							</div>
-
+					</a>
+					
 					</div>
 				</div>
 
