added image to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -80,14 +80,15 @@
 						</div>
 					</a>
 					
-					<a href="https://github.com/kumarivb/bamazon/blob/master/README.md" target="_blank"></a>
+					<a href="https://github.com/kumarivb/bamazon/blob/master/README.md" target="_blank">
 						<div class="card bg-dark text-white mb-4">
 							<img class="card-img img-fluid" src="assets/images/bamazon.jpg" alt="Bamazon">
 							<div class="card-img-overlay p-0">
 								<h4 class="card-title portfolioBar">Bamazon</h4>
 							</div>
+						</div>
 					</a>
-					
+
 					</div>
 				</div>
 
