added friend finder to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -87,10 +87,20 @@
 								<h4 class="card-title portfolioBar">Bamazon</h4>
 							</div>
 						</div>
+                    </a>
+                    
+                    <a href="https://pure-plains-84907.herokuapp.com/" target="_blank">
+						<div class="card bg-dark text-white mb-4">
+							<img class="card-img img-fluid" src="assets/images/friends.jpg" alt="FriendFinder">
+							<div class="card-img-overlay p-0">
+								<h4 class="card-title portfolioBar">Friend Finder</h4>
+							</div>
+						</div>
 					</a>
-
-					</div>
 				</div>
+
+				</div>
+			</div>
 
 			</div>
 		</div>
