added burger logger to portgolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,17 @@
 								<h4 class="card-title portfolioBar">Friend Finder</h4>
 							</div>
 						</div>
+                    </a>
+
+                    <a href="https://salty-bayou-98435.herokuapp.com" target="_blank">
+						<div class="card bg-dark text-white mb-4">
+							<img class="card-img img-fluid" src="assets/images/burger.jpg" alt="BurgerLogger">
+							<div class="card-img-overlay p-0">
+								<h4 class="card-title portfolioBar">Burger Logger</h4>
+							</div>
+						</div>
 					</a>
+
 				</div>
 
 				</div>
