fixed portfolio layout

--- a/contact.html
+++ b/contact.html
@@ -12,76 +12,71 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <nav class="navbar navbar-expand-lg navbar-light bg-white">
+            <div class="container">
+                <a class="navbar-brand siteHeader" href="index.html"><h1 class="bigYtext">Kumari</h1></a>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav ml-auto">
+                        <a class="nav-item nav-link" href="portfolio.html">Portfolio</a><span class="seperator">|</span>
+                        <a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
+                    </div>
+                </div>
+            </div>
+        </nav>
 
-	<nav class="navbar navbar-expand-lg navbar-light bg-white">
-		<div class="container">
-  			<a class="navbar-brand siteHeader" href="index.html"><h1 class="bigYtext">Kumari</h1></a>
-  				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    				<span class="navbar-toggler-icon"></span>
-  				</button>
-		  	<div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-		    	<div class="navbar-nav ml-auto">
-		      		<a class="nav-item nav-link" href="index.html">About</a><span class="seperator">|</span>
-		      		<a class="nav-item nav-link" href="portfolio.html">Portfolio</a><span class="seperator">|</span>
-		      		<a class="nav-item nav-link active" href="contact.html">Contact<span class="sr-only">(current)</span></a>
-		    	</div>
-		  	</div>
-		</div>
-	</nav>
+	    <div class="container contactContent">
+                <div class="row">
+                    <div class="col-md-8 colL">
+                        <div class="card">
+                            <div class="card-body">
+                                <h3 class="card-title headerContact">Contact</h3>
+                                <hr class="my-4">
+                                <form>
+                                    <div class="form-group">
+                                        <label class="col-form-label" for="formGroupNameInput">Name</label>
+                                        <input type="text" class="form-control" id="formGroupNameInput" placeholder="John Smith">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="exampleInputEmail1">Email address</label>
+                                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
+                                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                                    </div>
+                                    <!-- <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">Message</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                    </div> -->
+                                        <button type="submit" class="btn btn-primary"><a href="mailto:kumarivb@gmail.com?subject=Let's Converse">Submit</a></button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>            
+                        <div class="col-md-4">
+                            <div class="card">
+                                <div class="card-body pb-4" style="text-align: center;">
+                                    <h5 class="card-title headerConnect">Connect with Me</h5>
+                                    <hr class="my-4">
+                                    <p class="card-text">
+                                    <a href="https://github.com/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
+                                    <a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
+                                    <a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>           
+                </div>
+        </div>
+        <div class="push"></div>		
+    </div>	
 
-	<div class="container contactContent">
-		<div class="row">
-
-			<div class="col-md-8 colL">
-				<div class="card">
-  					<div class="card-body">
-    					<h3 class="card-title headerContact">Contact</h3>
-    				<hr class="my-4">
-						<form>
-								<div class="form-group">
-									<label class="col-form-label" for="formGroupNameInput">Name</label>
-								<input type="text" class="form-control" id="formGroupNameInput" placeholder="John Smith">
-							</div>
-							<div class="form-group">
-								<label for="exampleInputEmail1">Email address</label>
-								<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="example@gmail.com">
-								<small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-								</div>
-								<div class="form-group">
-								<label for="exampleFormControlTextarea1">Message</label>
-								<textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-								</div>
-								<button type="submit" class="btn btn-primary"><a href="mailto:kumarivb@gmail.com?subject=Lets%20Converse">Submit</a></button>
-						</form>
-    				</div>
-				</div>
-			</div>
-
-			<div class="col-md-4">
-				<div class="card">
-					<div class="card-body pb-4" style="text-align: center;">
-						<h5 class="card-title headerConnect">Connect with Me</h5>
-						<hr class="my-4">
-						<p class="card-text">
-						<a href="https://kumarivb.github.io/bootstrap_portfolio/index.html" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
-						<a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
-						<a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
-						</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="push"></div>
-
-		</div>
-	</div>
-
-	<footer>
-		<div class="container containFooter">
-			<p class="copyright">Copyright &copy; 2017 Kumari</p>
-	  	</div>
-	</footer>
-
+    <footer>
+        <div class="container containFooter">
+            <p class="copyright">Copyright &copy; 2017 Kumari</p>
+        </div>
+    </footer>										
 </body>
 
 </html>
