--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,23 @@
 							<div class="container">
 								<div class="row">
 									<!-- ROW 1 -->
-									<div class="col-md-6">										
+									<div class="col-md-6">
+										<div class="card bg-dark text-white mb-4 portolioCard">
+											<a href="https://kumarivb.github.io/stmfd/" target="_blank">
+											<img class="card-img img-fluid" src="assets/images/stmfd.png" alt="St. Michael FD">
+											<div class="card-img-overlay p-0">
+												<h4 class="card-title portfolioBar">St. Michael Fire Department</h4>
+											</div>
+											</a>
+										</div>										
+										<div class="card bg-dark text-white mb-4 portolioCard">
+											<a href="https://tkrr.github.io/crammingclique/" target="_blank">
+											<img class="card-img img-fluid" src="assets/images/cClique.jpg" alt="Cramming Clique">
+											<div class="card-img-overlay p-0">
+												<h4 class="card-title portfolioBar">Cramming Clique</h4>
+											</div>
+											</a>
+										</div>
 										<div class="card bg-dark text-white mb-4 portolioCard">
 											<a href="https://kumarivb.github.io/trainTime/" target="_blank">
 											<img class="card-img img-fluid" src="assets/images/train.png" alt="Train Time">
@@ -46,14 +62,6 @@
 												<h4 class="card-title portfolioBar">Train Time</h4>
 											</div>
 											</a>
-										</div>
-										<div class="card bg-dark text-white mb-4 portolioCard">
-											<a href="https://tkrr.github.io/crammingclique/" target="_blank">
-											<img class="card-img img-fluid" src="assets/images/cClique.jpg" alt="Cramming Clique">
-											<div class="card-img-overlay p-0">
-												<h4 class="card-title portfolioBar">Cramming Clique</h4>
-											  </div>
-											  </a>
 										</div>	
 										<div class="card bg-dark text-white mb-4 portolioCard">
 											<a href="https://kumarivb.github.io/liriNode/" target="_blank">
