--- a/contact.html
+++ b/contact.html
@@ -68,8 +68,7 @@
                                 <hr class="my-4">
                                 <p class="card-text">
                                 <a href="https://github.com/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
-                                <a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
-                                <a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+                                <a href="https://www.linkedin.com/in/kumarivb?trk=profile-badge" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
                                 </p>
                             </div>
                         </div>
@@ -87,6 +86,8 @@
             <p class="copyright">Copyright &copy; 2017 Kumari</p>
         </div>
     </footer>										
-</body>
 
+    <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
+
+</body>
 </html>
