--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
 							<hr class="my-4">
 							<p class="card-text">
 							<a href="https://github.com/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/github.png" alt="Github"></a>
-							<a href="https://www.linkedin.com/in/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
-							<a href="https://stackoverflow.com/cv/kumarivb" target="_blank"><img class="img-fluid connect rounded" src="assets/images/stackoverflow.png" alt="StackOverflow"></a>
+							<a href="https://www.linkedin.com/in/kumarivb?trk=profile-badge" target="_blank"><img class="img-fluid connect rounded" src="assets/images/linkedin.png" alt="LinkedIn"></a>
 							</p>
 						</div>
 					</div>
@@ -71,6 +70,8 @@
 		</div>
 	</footer>
 	<!-- END FOOTER  -->
+
+	<script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </body>
 </html>
